treasures track demo

--- a/src/DSA/Treasures/Treasures.css
+++ b/src/DSA/Treasures/Treasures.css
@@ -4,5 +4,7 @@
 
 .Treasure {
     /*display: inline-block;*/
-    display: block;
+    /*position: relative;*/
+    position: absolute;
+    display: inline-block;
 }
