--- a/src/DSA/Game.css
+++ b/src/DSA/Game.css
@@ -2,10 +2,12 @@
     text-align: center;
     background-image: linear-gradient(#6aaa9a, #282c34);
     min-height: 100vh;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     /*justify-content: center;*/
     color: white;
+    user-select: none;
 }
