--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
-body {
+html {
   margin: 0;
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html, body, #root {
+  margin: 0;
+  overflow: hidden;
+  min-height: 100vh;
+  height: 100%;
 }
 
 code {
