--- a/src/DSA/Treasures/Treasures.css
+++ b/src/DSA/Treasures/Treasures.css
@@ -1,5 +1,8 @@
 .Treasures {
-    position: relative;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    /*border: solid 1px teal;*/
 }
 
 .Treasure {
