--- a/src/DSA/PlayerBoard/PlayerBoard.css
+++ b/src/DSA/PlayerBoard/PlayerBoard.css
@@ -1,48 +1,86 @@
 .PlayerBoard {
     position: absolute;
-    width: 200px;
+    width: 0;
     height: 352px;
     right: 0;
     top: 400px;
     margin: 5px;
-    background-image: url("player_board_200.png");
+    background-image: url("player_board_210.png");
     border-radius: 10px;
     border: solid 1px #016b8c;
     color: black;
+    text-align: left;
+    vertical-align: top;
+    transition: all 300ms ease;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+#playerDiveContainer {
+    /*display: inline-block;*/
+    float: left;
+    width: 198px;
+    height: 352px;
+    text-align: center;
+    /*border: solid 1px red;*/
 }
 
 #playerGoUp {
-    position: relative;
-    height: 90px;
-    vertical-align: top;
+    height: 85px;
     padding-top: 15px;
     cursor: pointer;
-    transition: all 0.2s ease-in-out;
-    /*border: solid 1px #016b8c;*/
+    /*border: solid 1px blue;*/
 }
 
 #playerDiceArea {
-    position: relative;
     height: 80px;
-    padding-top: 20px;
+    padding-top: 25px;
     vertical-align: center;
-    /*border: solid 1px #016b8c;*/
+    /*border: solid 1px blue;*/
 }
 
 #playerCargo {
-    position: relative;
-    height: 20px;
-    padding-top: 5px;
-    vertical-align: center;
-    border: solid 1px #016b8c;
+    height: 30px;
+    /*padding-top: 0px;*/
+    color: orange;
+    font-size: large;
+    font-weight: bold;
+    /*border: solid 1px blue;*/
 }
 
 #playerGoDown {
-    position: relative;
-    height: 70px;
-    vertical-align: bottom;
-    padding-top: 45px;
+    height: 75px;
+    padding-top: 35px;
     cursor: pointer;
-    transition: all 0.2s ease-in-out;
-    /*border: solid 1px #016b8c;*/
+    /*border: solid 1px blue;*/
+}
+
+#playerTreasureContainer {
+    /*display: inline-block;*/
+    float: right;
+    width: 198px;
+    height: 352px;
+    text-align: center;
+    /*border: solid 1px red;*/
+}
+
+#playerPass {
+    height: 85px;
+    padding-top: 15px;
+    cursor: pointer;
+    /*border: solid 1px teal;*/
+}
+
+#playerPickTreasure {
+    height: 105px;
+    padding-top: 40px;
+    cursor: pointer;
+    /*border: solid 1px teal;*/
+}
+
+#playerDropTreasure {
+    height: 100px;
+    /*padding-top: 45px;*/
+    cursor: pointer;
+    /*border: solid 1px teal;*/
 }
