--- a/src/DSA/Bubbles/Bubbles.css
+++ b/src/DSA/Bubbles/Bubbles.css
@@ -3,9 +3,9 @@
     min-width: 600px;
     width: 40%;
     height: 98%;
-    margin-top: 0px;
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-top: 0;
+    margin-left: 10%;
+    margin-right: 10%;
     /*border: solid 1px red;*/
 }
 
