--- a/src/DSA/Game.css
+++ b/src/DSA/Game.css
@@ -6,10 +6,14 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /*align-items: center;*/
     /*justify-content: center;*/
     color: white;
     user-select: none;
+}
+
+#game-content{
+    padding-left: 10%;
 }
 
 #game-field {
