--- a/src/DSA/Players/Players.css
+++ b/src/DSA/Players/Players.css
@@ -1,6 +1,6 @@
 .Players {
     position: absolute;
-    width: 400px;
+    width: 500px;
     right: 0;
     top: 50px;
     padding: 5px;
@@ -24,11 +24,13 @@
     vertical-align: middle;
     /*top: -4px;*/
     right: 10px;
-    width: 200px;
+    width: 300px;
     height: 40px;
     text-align: right;
-    /*border: solid 1px gold;*/
     z-index: 0;
+    overflow-x: visible;
+    white-space: nowrap;
+    /*border: solid 1px gold;*/
 }
 
 .PlayerScore{
